--- a/content/resources/6-055js08.md
+++ b/content/resources/6-055js08.md
@@ -5,12 +5,13 @@ description: Water waves produced by drops of rain spread in all directions. Lea
 file: /courses/6-055j-the-art-of-approximation-in-science-and-engineering-spring-2008/dc0932fed5e8d55a868a31bdbcdc7ebb_6-055js08.jpg
 file_size: 37664
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: Water waves produced by drops of rain spread in all directions. Learn more
     in Chapter 10 of the [readings](/courses/6-055j-the-art-of-approximation-in-science-and-engineering-spring-2008/pages/readings).
-    (Image courtesy of {{% resource_link "47b21955-d847-4ae8-8fd4-3b44fb1abf29" "Stephen
-    Cannon" %}} on {{% resource_link "fc454e06-172c-4052-8bf6-efc9a16eb85c" "Flickr"
-    %}}.)
+    (Image courtesy of [Stephen Cannon](http://www.flickr.com/photos/stephencannon/)
+    on [Flickr](http://www.flickr.com/photos/stephencannon/240808445/).)
   credit: ''
   image-alt: Circular water ripples on a pond produced by drops of rain.
 learning_resource_types: []
