Sync all content

--- a/content/resources/6-055js08-th.md
+++ b/content/resources/6-055js08-th.md
@@ -7,8 +7,9 @@ file_type: image/jpeg
 image_metadata:
   caption: Water waves produced by drops of rain spread in all directions. Learn more
     in Chapter 10 of the [readings](/courses/6-055j-the-art-of-approximation-in-science-and-engineering-spring-2008/pages/readings).
-    (Image courtesy of [Stephen Cannon](http://www.flickr.com/photos/stephencannon/)
-    on [Flickr](http://www.flickr.com/photos/stephencannon/240808445/).)
+    (Image courtesy of {{% resource_link "ce0bd6d1-6e7c-432e-b053-fa51aa81f998" "Stephen
+    Cannon" %}} on {{% resource_link "a324e8c8-15ed-4e81-bd99-77e9e5fb819e" "Flickr"
+    %}}.)
   credit: ''
   image-alt: Circular water ripples on a pond produced by drops of rain.
 learning_resource_types: []
